# new_thirtyfour

./: .gitignore  .~lock.result.csv#  Cargo.toml  cspell.json  project_path.md
examples/: explore_csv.rs  explore_csv_serde.rs  explore_enum.rs  foo.csv  minimal_thirtyfour.rs  my_tokio_basic.rs  thirtyfour_browser_screenshot.rs  thirtyfour_minimal.rs  tokio_basic.rs  tokio_finfiz_method_four.rs  tokio_finfiz_method_second.rs  tokio_finfiz_method_third.rs  tokio_finviz.rs  tokio_finviz_csv.rs  tokio_finviz_get_stock_data.rs  tokio_finviz_get_stock_data_ext_csv_path.rs  tokio_finviz_method.rs  tokio_finviz_method_eigth.rs  tokio_finviz_method_five.rs  tokio_finviz_method_four.rs  tokio_finviz_method_seven.rs  tokio_finviz_method_six.rs  tokio_finviz_struct.rs  writer_csv.rs
examples_old/: explore_enum.rs  my_tokio_basic.rs  thirtyfour_browser_screenshot.rs  thirtyfour_use_google.rs  tokio_finviz_method_four.rs
old/: Dockerfile_lxde  Dockerfile_lxde_chrome  Dockerfile_lxde_chrome_rust  color-eyre-custom-section.rs  start_container_dbus.sh  start_container_lxde_chrome.sh  start_container_lxde_chrome_entrypoint_bash.sh  start_container_lxde_chrome_rust_entrypoint_bash.sh  start_pre_clean_clipboard.sh  tokio_finfiz_method_second.rs  tokio_finviz.rs  tokio_finviz_csv.rs
old_src/: Dockerfile_debian_it  Dockerfile_lxde_chrome_rust_user  tokio_finviz_struct.rs
scripts/: spilt_csv_row.sh
src/: Dockerfile_lxde_chrome_rust_second  test_list.rs
