[package]
name = "new_thirtyfour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
thirtyfour = "0.31.0"
tokio = "1.36.0"

[[example]]
name = "tokio_basic"
