[package]
name = "new_thirtyfour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# color-eyre = "0.6.2"
# sxd-document = "0.3.2"
# sxd-xpath = "0.4.2"
# thirtyfour = "0.31.0"
# tokio = { version = "1.32.0", features = ["full"] }

# FROM HERE
# https://github.com/itehax/rust-scraping/blob/master/airbnb/Cargo.toml
[dependencies]
csv = "1.2.2"
serde = { version = "1.0.188", features = ["derive"] }
thirtyfour = "0.31.0"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
color-eyre = "0.6.2"

[[example]]
name = "tokio_basic"
